# openstack-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: test_list_servers.py
src/openstack_mcp_server/: __init__.py  __main__.py  config.py  server.py  tools.py
tests/: __init__.py  test_tools.py
